# npugpt

./: .gitignore  CMakeLists.txt  INSTALL.md  KVCache.md  KV_CACHE_BUILD_RESULTS.md  KV_CACHE_IMPLEMENTATION_SUMMARY.md  README.md  README_BENCHMARK_SECTION.md  README_KVCACHE_COMPARISON.md  REAL_KVCACHE_OUTPUTS.md  build_kvcache_benchmarks.py  build_kvcache_simple.bat  compile_simple_demo.bat  consolidated_6way_benchmark.cpp  demo_real_kvcache_outputs.cpp  install_deps.py  real_gpt2_kvcache_benchmark.cpp  realistic_kvcache_benchmark.cpp  simple_6way_benchmark.cpp  simple_kvcache_attention_demo.cpp  simple_kvcache_demo.cpp  working_npu_kvcache_benchmark.cpp
benchmarks/: attention_kvcache_benchmark.cpp  comprehensive_gpt2_benchmark.cpp  comprehensive_gpt2_benchmark_with_kvcache.cpp  energy_efficiency_benchmark.cpp  scalability_benchmark_suite.cpp  standalone_kvcache_demo.cpp
examples/: npu_gpt2_demo.cpp
include/: bpe_tokenizer.h  gpt2_types_working.h  hardware_abstraction.h  inference_engine.h  kv_cache.h  qnn_context.h  standalone_qnn_static_graph.h
src/: attention_kvcache_layer.h  flashattention2_fused_kvcache_npu_gpt2_engine.cpp  flashattention2_fused_npu_gpt2_engine.cpp  flashattention2_gpt2_engine.h  flashattention2_kvcache_npu_gpt2_engine.cpp  flashattention2_npu_gpt2_engine.cpp  fused_npu_gpt2_engine.cpp  npu_callback_profiling.cpp  npu_callback_profiling.h  npu_gpt2_engine.h  npu_gpt2_engine_working.h  real_kvcache_gpt2_engine.cpp  real_kvcache_gpt2_engine.h  simple_attention_with_kvcache.h
